# or

./: CMakePresets.json  CMakelists.txt  PO_Solucao_AP1_MixProducao.ipynb  README.md  main.cpp
conan/: conanfile.txt
devcontainer-template/: Dockerfile  devcontainer.json
src/utils/include/: BranchAndBound.h  GLPKSolver.h  ProblemReader.h  SolveStatus.h
src/utils/lib/: BranchAndBound.cpp  GLPKSolver.cpp  ProblemReader.cpp
tests/bb_unit_tests/: BranchAndBoundUnitTests.cpp  CMakeLists.txt
vscode-template/: launch.json  settings.json  tasks.json
